Actions
Bug #7484
closedGarbage in libscf.h makes dumb compilers cry
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Start date:
2016-10-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
There are some questionable things libscf.h, like the explicit cast on string literals (why?) and the fact that scf_version_t is defined as an opaque type (why?). Some compilers (like cgo) aren't smart enough to deal with this, and to be honest they shouldn't have to.
Updated by Andrew Stormont almost 6 years ago
Updated by Electric Monk almost 6 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 3db3a6b813432461e8e60af00e9ad6f0bf0d5eaf
commit 3db3a6b813432461e8e60af00e9ad6f0bf0d5eaf Author: Andrew Stormont <astormont@racktopsystems.com> Date: 2016-10-24T15:22:12.000Z 7484 Garbage in libscf.h makes dumb compilers cry Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Sam Zaydel <szaydel@racktopsystems.com> Reviewed by: Kim Shrier <kshrier@racktopsystems.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions