7484 Garbage in libscf.h makes dumb compilers cry Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Sam Zaydel <szaydel@racktopsystems.com> Reviewed by: Kim Shrier <kshrier@racktopsystems.com> Approved by: Dan McDonald <danmcd@omniti.com>